# gg

./: .gitignore  AGENTS.md  Cargo.toml  EXECPLAN.md  README.md
benches/: gg_bench.rs
specs/: grepapp_sdk_cli.md
src/: app.rs  cache.rs  client.rs  crawl.rs  error.rs  http.rs  languages.json  languages.rs  lib.rs  main.rs  models.rs  query.rs  sitemap.rs  snippet.rs  urlspec.rs  util.rs
tests/: basic.rs  markdown_cleanup.rs
tests/unit/: test_grepapp_sdk_cli.py
